# models/User.js
@@ -1,33 +1,20 @@
-const ObjectId = require("mongodb");
-const bcrypt = require("bcrypt");
+const { getDb } = require('../data/database');
+const bcrypt = require('bcrypt');
 
-export class User {
-    constructor(mongodb) {
-        this.collection = mongodb.collection("users");
-    }
+const collectionName = 'users';
 
-    async create({ name, email, password, role = "user", isPaid = false }) {
-        const hashed = await bcrypt.hash(password, 10);
-        const result = await this.collection.insertOne({
-            name,
-            email,
-            password: hashed,
-            role,
-            isPaid,
-            createdAt: new Date(),
-        });
-        return result;
-    }
-
-    async findByEmail(email) {
-        return await this.collection.findOne({ email });
-    }
-
-    async findById(id) {
-        return await this.collection.findOne({ _id: new ObjectId(id) });
-    }
-
-    async comparePassword(user, password) {
-        return await bcrypt.compare(password, user.password);
-    }
+async function createUser(userData) {
+    const db = getDb();
+    const users = db.collection(collectionName);
+    const hashedPassword = await bcrypt.hash(userData.password, 10);
+    const user = {...userData, password: hashedPassword };
+    const result = await users.insertOne(user);
+    return result;
 }
+
+async function findByEmail(email) {
+    const db = getDb();
+    return await db.collection(collectionName).findOne({ email });
+}
+
+module.exports = { createUser, findByEmail };
