# server.js
@@ -1,11 +1,8 @@
 const express = require('express');
-
 const mongodb = require('./data/database');
 const bodyParser = require('body-parser');
-
 const route = require('./routes/index.js');
-//import authRoutes from "./routes/authRoutes.js";
-const createAdmin = require("./utils/createAdmin.js");
+const bcrypt = require('bcryptjs');
 
 
 
@@ -16,30 +13,52 @@ const port = process.env.PORT || 5000;
 app.use(bodyParser.json());
 app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
-    res.setHeader(
-        'Access-Control-Allow-Headers',
-        'Origin, X-Requested-With, Content-Type, Accpt, Z-Key'
-    );
+    res.setHeader('Access-Control-Allow-Headers', 'Content-Type, Authorization');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
     next();
 });
 
-const User = require("./models/User.js");
-app.locals.userModel = new User(mongodb);
+
 
 app.use('/', route)
 
-
-
-
-// Create admin user if not exists
-createAdmin(mongodb);
 
 
 mongodb.initDb((err) => {
     if (err) {
         console.log(err);
     } else {
+        mongodb.initDb(async(err) => {
+            if (err) {
+                console.log(err);
+            } else {
+                const adminEmail = process.env.ADMIN_EMAIL;
+                const adminPassword = process.env.ADMIN_PASSWORD;
+
+                function getCollection() {
+                    return mongodb.getDatabase().db().collection("movie_app");
+                }
+
+                try {
+                    const existingAdmin = await getCollection().findOne({ email: adminEmail });
+                    if (!existingAdmin) {
+                        const hashedPassword = await bcrypt.hash(adminPassword, 10);
+                        await getCollection().insertOne({
+                            name: "Admin",
+                            email: adminEmail,
+                            password: hashedPassword,
+                            role: "admin",
+                            isPaid: true,
+                        });
+                        console.log("✅ Admin user created");
+                    } else {
+                        console.log("ℹ️ Admin already exists");
+                    }
+                } catch (error) {
+                    console.error("❌ Error creating admin:", error);
+                }
+            }
+        });
         app.listen(port);
         console.log(`Connected to DB and listening on ${port}`);
     }
